# server/models/schemas.py
@@ -2,10 +2,10 @@ from marshmallow import Schema, fields
 
 
 class ApplicationSchema(Schema):
-    id = fields.Int(dump_only=True)
+    id = fields.Int(dump_only=True, required=True)
     name = fields.Str(required=True)
-    created_at = fields.DateTime(dump_only=True)
-    updated_at = fields.DateTime()
+    created_at = fields.DateTime(dump_only=True, required=True)
+    updated_at = fields.DateTime(required=True)
 
 
 application_schema = ApplicationSchema()
