# server/openapi/openapi.yaml
@@ -9,6 +9,8 @@ servers:
 paths:
   /application:
     post:
+      tags:
+        - application
       operationId: controllers.application_controller.post_application
       responses:
         200:
@@ -24,6 +26,8 @@ paths:
               $ref: '#/components/schemas/Application'
   /application/{application_id}:
     get:
+      tags:
+        - application
       operationId: controllers.application_controller.get_application
       parameters:
         - name: application_id
@@ -40,6 +44,8 @@ paths:
                 $ref: '#/components/schemas/Application'
   /applications:
     get:
+      tags:
+        - application
       operationId: controllers.application_controller.get_applications
       responses:
         200:
@@ -57,6 +63,9 @@ components:
       type: object
       required:
         - name
+        - created_at
+        - updated_at
+        - id
       properties:
         id:
           type: string
